kubernetes/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-spring-app
  namespace: my-app-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-spring-app
  template:
    metadata:
      labels:
        app: my-spring-app
    spec:
      containers:
        - name: spring-app
          image: bojan2002/your-app:latest
          ports:
            - containerPort: 8085
