kubernetes/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: my-app-namespace
spec:
  selector:
    app: my-spring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
#      nodePort: 30001
#  type: NodePort
  type: ClusterIP
