kubernetes/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: my-app-namespace
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
